--- a/src/views/11.html
+++ b/src/views/11.html
@@ -10,47 +10,23 @@
     </div>
 </body>
 <script>
-    var exposeObj = { window: { name: "caiwu" } }
+    Object.defineProperty(window, "type", {
+        value: data => {
+            return Object.prototype.toString.call(data).slice(8, -1);
+        },
+        writable: true,
+        enumerable: false,
+        configurable: false
+    });
+    Object.defineProperty(window, "type", {
+        value: data => {
+            return Object.prototype.toString.call(data).slice(8, -1);
+        },
+        writable: true,
+        enumerable: false,
+        configurable: false
+    });
 
-    function compileCode(src) {
-        src = `with (exposeObj) { ${src} }`
-        return new Function('exposeObj', src)
-    }
-
-
-    function proxyObj(originObj) {
-        let exposeObj = new Proxy(originObj, {
-            has: (target, key) => {
-                console.log(key);
-                if (["console", "Math", "Date"].indexOf(key) >= 0) {
-                    console.log(target[key]);
-                    return target[key]
-                }
-                if (!target.hasOwnProperty(key)) {
-                    throw new Error(`Illegal operation for key ${key}`)
-                }
-                return target[key]
-            },
-        })
-        return exposeObj
-    }
-
-
-    function createSandbox(src, obj) {
-        let proxy = proxyObj(obj)
-        compileCode(src).call(proxy, proxy) //绑定this 防止this访问window	
-    }
-    const testObj = {
-        value: 1,
-        a: {
-            b: 11
-        }
-    }
-    console.log(testObj.console);
-    with (testObj) {
-        console.log(testObj.console);
-    }
-    createSandbox("value='haha';console.log(console)", testObj)
 </script>
 
 </html>
